<resources>
    <string name="app_name">Kontak</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">Email</string>
    <string name="brithday">Brithday</string>
</resources>